# swe-cloud

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN_DEPLOYMENT_AUDIT.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_FINAL_STATUS.md  README.md  README_OVERVIEW_COMPLIANCE.md  SECURITY.md  TRIPLE_SYNC_PLAN.md  check_azure.txt  check_output.txt  cloud  setup_cloudemu_env.ps1
apps/cloudcost/: Cargo.toml
apps/cloudcost/src/: main.rs
apps/cloudcost/src/calc/: mod.rs
apps/cloudcost/src/core/: mod.rs
apps/cloudcost/src/ingest/: mod.rs
apps/cloudemu-desktop/: Cargo.toml
apps/cloudemu-desktop/src/: main.rs
apps/cloudemu-web/: Cargo.toml
apps/cloudemu-web/src/: main.rs
apps/swe-cloud-ui/crates/rsc-lint/: Cargo.toml
apps/swe-cloud-ui/crates/rsc-lint/src/: config.rs  lib.rs
apps/swe-cloud-ui/crates/rsc-security/: Cargo.toml
apps/swe-cloud-ui/crates/rsc-security/src/: lib.rs
backend/: CHANGELOG.md  CLOUDKIT_REVIEW.md  CONTRIBUTING.md  Cargo.toml  README.md  errors.txt
backend/crates/cloudemu/: BACKLOG.md  Cargo.toml  README.md  REVIEW.md
backend/crates/cloudemu/control-plane/: Cargo.toml
backend/crates/cloudemu/control-plane/src/: error.rs  lib.rs  main.rs
backend/crates/cloudemu/data-plane/doc/: architecture.md
backend/crates/cloudemu/doc/: REVIEW.md
backend/crates/cloudemu/doc/3-design/: architecture.md
backend/crates/cloudemu/doc/4-development/: backlog.md  (+1 more)
backend/crates/cloudemu/examples/: aws_sdk_usage.rs
backend/crates/cloudemu/src/: error.rs  lib.rs
backend/crates/cloudemu/tests/: integration_tests.rs
backend/crates/cloudkit/: Cargo.toml
backend/crates/cloudkit-aws/: Cargo.toml
backend/crates/cloudkit-aws/src/: builder.rs  cloudwatch.rs  cognito.rs  dynamodb.rs  eventbridge.rs  kms.rs  lambda.rs  lib.rs  s3.rs  secrets.rs  sns.rs  sqs.rs  stepfunctions.rs
backend/crates/cloudkit-azure/: Cargo.toml
backend/crates/cloudkit-azure/src/: blob.rs  builder.rs  cosmos.rs  eventgrid.rs  identity.rs  keyvault.rs  monitor.rs  servicebus.rs
backend/crates/cloudkit-gcp/: Cargo.toml
backend/crates/cloudkit-gcp/src/: builder.rs  eventarc.rs  firestore.rs  gcs.rs  identity.rs  kms.rs  lib.rs  monitor.rs  pubsub.rs  secrets.rs  workflows.rs
backend/crates/cloudkit-oracle/: Cargo.toml
backend/crates/cloudkit-oracle/src/: lib.rs
backend/crates/cloudkit/cloudkit-aws/: Cargo.toml
backend/crates/cloudkit/cloudkit-azure/: Cargo.toml
backend/crates/cloudkit/cloudkit-gcp/: Cargo.toml
backend/crates/cloudkit/src/: lib.rs  prelude.rs
backend/crates/cloudkit_api/: Cargo.toml
backend/crates/cloudkit_api/src/: events.rs  identity.rs  kv_store.rs  monitoring.rs  pubsub.rs
backend/crates/cloudkit_core/: Cargo.toml
backend/crates/cloudkit_core/src/: lib.rs
backend/crates/cloudkit_spi/: Cargo.toml
backend/crates/cloudkit_spi/src/: retry.rs
backend/crates/control-plane/: Cargo.toml
backend/crates/control-plane/src/: error.rs  lib.rs
backend/crates/data-plane/: Cargo.toml
backend/crates/data-plane/src/: lib.rs
backend/doc/3-design/: 01-overview.md  02-architecture.md  04-provider-integration.md  06-configuration.md  07-spi-extensions.md  08-wasm-support.md  09-testing-strategy.md  11-cloudemu-architecture.md  14-production-s3-emulator.md  README.md
backend/docs/: architecture.md  cloudkit-overview.md  wasm.md
backend/examples/: basic_usage.rs
cloudemu/crates/cloudemu-azure/: Cargo.toml
cloudemu/crates/cloudemu-azure/src/: lib.rs  provider.rs  storage.rs
cloudemu/crates/cloudemu-server/: Cargo.toml
cloudemu/crates/cloudemu-server/src/: config.rs  main.rs  server.rs
cloudemu/crates/cloudemu-server/tests/: server_test.rs
cloudemu/crates/cloudemu_api/: Cargo.toml
cloudemu/crates/cloudemu_api/src/: database.rs  lib.rs  messaging.rs  storage.rs
cloudemu/crates/cloudemu_core/: Cargo.toml
cloudemu/crates/cloudemu_core/aws/: Cargo.toml
cloudemu/crates/cloudemu_core/azure/: Cargo.toml
cloudemu/crates/cloudemu_core/gcp/: Cargo.toml
cloudemu/crates/cloudemu_core/src/: lib.rs
cloudemu/crates/cloudemu_server/: Cargo.toml
cloudemu/crates/cloudemu_server/src/: main.rs  server.rs
cloudemu/crates/cloudemu_spi/: Cargo.toml
cloudemu/crates/cloudemu_spi/src/: provider.rs
cloudemu/crates/control-plane/: Cargo.toml
cloudemu/crates/control-plane/src/: lib.rs
cloudemu/crates/control-plane/tests/: s3_integration.rs
cloudemu/crates/data-plane/: Cargo.toml
cloudemu/crates/data-plane/src/: config.rs
cloudemu/server/: Cargo.toml  README.md
cloudemu/server/doc/3-design/: toolchain.md
cloudemu/server/src/: main.rs
cloudemu/zero/zero-cli/: Cargo.toml
cloudemu/zero/zero-cli/doc/: overview.md
cloudemu/zero/zero-cli/docs/: overview.md
cloudemu/zero/zero-cli/src/: lib.rs  main.rs
cloudemu/zero/zero-cli/tests/: integration.rs
cloudkit/crates/cloudkit_core/: Cargo.toml
cloudkit/crates/cloudkit_core/aws/: Cargo.toml
cloudkit/crates/cloudkit_core/azure/: Cargo.toml
cloudkit/crates/cloudkit_core/doc/: overview.md
cloudkit/crates/cloudkit_core/docs/: overview.md
cloudkit/crates/cloudkit_core/gcp/: Cargo.toml
cloudkit/crates/cloudkit_core/oracle/: Cargo.toml
cloudkit/crates/cloudkit_core/src/: executor.rs  lib.rs
cloudkit/crates/cloudkit_core/zero/: Cargo.toml
cloudkit/crates/cloudkit_facade/: Cargo.toml
cloudkit/crates/cloudkit_facade/doc/: overview.md
cloudkit/crates/cloudkit_facade/examples/: 01_aws_s3_getting_started.rs  02_error_handling.rs  03_multi_cloud_storage.rs  04_local_development.rs  05_testing_and_mocking.rs  06_custom_provider.rs  07_database_dynamodb.rs  08_messaging_sqs.rs  09_pubsub_sns.rs  10_serverless_lambda.rs
cloudkit/crates/cloudkit_facade/src/: lib.rs  prelude.rs
cloudkit/crates/cloudkit_facade/tests/: aws_integration.rs  gcp_integration.rs  zero_integration.rs
cloudkit/crates/cloudkit_spi/: Cargo.toml
cloudkit/crates/cloudkit_spi/doc/: overview.md
cloudkit/crates/cloudkit_spi/src/: auth.rs  config.rs  context.rs  error.rs  lib.rs  logger.rs  metrics.rs  region.rs  retry.rs  types.rs
crates/cloudkit-gcp/: Cargo.toml
(+1594 files in other folders)
