[workspace]
resolver = "2"
members = [
    # CloudEmu crates
    "cloudemu/crates/cloudemu_spi",
    "cloudemu/crates/cloudemu_api",
    "cloudemu/crates/cloudemu_core",
    "cloudemu/crates/cloudemu_server",
    "cloudemu/crates/data-plane",
    # CloudEmu provider crates (nested under cloudemu_core)
    "cloudemu/crates/cloudemu_core/aws",
    "cloudemu/crates/cloudemu_core/aws/control-plane",
    "cloudemu/crates/cloudemu_core/aws/data-plane",
    "cloudemu/crates/cloudemu_core/azure",
    "cloudemu/crates/cloudemu_core/gcp",
    # CloudKit crates
    "cloudkit/crates/cloudkit_*",
    # CloudKit provider crates (nested under cloudkit_core)
    "cloudkit/crates/cloudkit_core/aws",
    "cloudkit/crates/cloudkit_core/azure",
    "cloudkit/crates/cloudkit_core/gcp",
    "cloudkit/crates/cloudkit_core/oracle",
]


[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["SWE Engineering Labs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sweengineeringlabs/swe-cloud"

[workspace.dependencies]
# CloudKit modules
cloudkit = { path = "cloudkit/crates/cloudkit_facade" }
cloudkit_spi = { path = "cloudkit/crates/cloudkit_spi" }
cloudkit_api = { path = "cloudkit/crates/cloudkit_api" }
cloudkit_core = { path = "cloudkit/crates/cloudkit_core" }
# CloudKit provider crates (nested under cloudkit_core)
cloudkit-aws = { path = "cloudkit/crates/cloudkit_core/aws" }
cloudkit-azure = { path = "cloudkit/crates/cloudkit_core/azure" }
cloudkit-gcp = { path = "cloudkit/crates/cloudkit_core/gcp" }
cloudkit-oracle = { path = "cloudkit/crates/cloudkit_core/oracle" }

# CloudEmu modules
cloudemu_spi = { path = "cloudemu/crates/cloudemu_spi" }
cloudemu_api = { path = "cloudemu/crates/cloudemu_api" }
cloudemu_core = { path = "cloudemu/crates/cloudemu_core" }
cloudemu_server = { path = "cloudemu/crates/cloudemu_server" }
data-plane = { path = "cloudemu/crates/data-plane" }
# CloudEmu provider crates (nested under cloudemu_core)
cloudemu-aws = { path = "cloudemu/crates/cloudemu_core/aws" }
cloudemu-azure = { path = "cloudemu/crates/cloudemu_core/azure" }
cloudemu-gcp = { path = "cloudemu/crates/cloudemu_core/gcp" }


# Async
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Representation
bytes = "1.9"
http = "1.4"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Web
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# UI
dioxus = { version = "0.6", features = ["web", "router"] }
dioxus-desktop = "0.6"

# Native GUI
iced = { version = "0.13", features = ["tokio"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
mockall = "0.13"
wiremock = "0.6"
tokio-test = "0.4"

# AWS SDK
aws-config = "1.5"
aws-sdk-s3 = "1.65"
aws-sdk-dynamodb = "1.56"
aws-sdk-sqs = "1.51"
aws-sdk-sns = "1.53"
aws-sdk-lambda = "1.60"
aws-sdk-secretsmanager = "1.52"
aws-sdk-cloudwatch = "1.52"
aws-sdk-cloudwatchlogs = "1.52"
aws-sdk-eventbridge = "1.52"
aws-sdk-sfn = "1.54"
aws-sdk-cognitoidentityprovider = "1.54"
aws-sdk-kms = "1.52"

# Azure SDK
azure_core = "0.21"
azure_storage = "0.21"
azure_storage_blobs = "0.21"
azure_identity = "0.21"
azure_security_keyvault = "0.21"

# GCP SDK
google-cloud-storage = "0.22"
google-cloud-pubsub = "0.29"

