[workspace]
resolver = "2"
members = [

    # CloudEmu provider crates (Full SEA pattern)
    # AWS
    "cloudemu/aws/control-plane/aws-control-spi",
    "cloudemu/aws/control-plane/aws-control-api",
    "cloudemu/aws/control-plane/aws-control-core",
    "cloudemu/aws/control-plane/aws-control-facade",
    "cloudemu/aws/data-plane/aws-data-spi",
    "cloudemu/aws/data-plane/aws-data-api",
    "cloudemu/aws/data-plane/aws-data-core",
    "cloudemu/aws/data-plane/aws-data-facade",
    # Azure
    "cloudemu/azure/control-plane/azure-control-spi",
    "cloudemu/azure/control-plane/azure-control-api",
    "cloudemu/azure/control-plane/azure-control-core",
    "cloudemu/azure/control-plane/azure-control-facade",
    "cloudemu/azure/data-plane/azure-data-spi",
    "cloudemu/azure/data-plane/azure-data-api",
    "cloudemu/azure/data-plane/azure-data-core",
    "cloudemu/azure/data-plane/azure-data-facade",
    # Oracle
    "cloudemu/oracle/control-plane/oracle-control-spi",
    "cloudemu/oracle/control-plane/oracle-control-core",
    "cloudemu/oracle/data-plane/oracle-data-core",
    # GCP
    "cloudemu/gcp/control-plane/gcp-control-spi",
    "cloudemu/gcp/control-plane/gcp-control-api",
    "cloudemu/gcp/control-plane/gcp-control-core",
    "cloudemu/gcp/control-plane/gcp-control-facade",
    "cloudemu/gcp/data-plane/gcp-data-spi",
    "cloudemu/gcp/data-plane/gcp-data-api",
    "cloudemu/gcp/data-plane/gcp-data-core",
    "cloudemu/gcp/data-plane/gcp-data-facade",
    # CloudKit crates
    "cloudkit/crates/cloudkit_*",
    # CloudKit provider crates (nested under cloudkit_core)
    "cloudkit/crates/cloudkit_core/aws",
    "cloudkit/crates/cloudkit_core/azure",
    "cloudemu/server",
    "apps/cloudcost",
]


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["SWE Engineering Labs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sweengineeringlabs/swe-cloud"

[workspace.dependencies]
# CloudKit modules
cloudkit = { path = "cloudkit/crates/cloudkit_facade" }
cloudkit_spi = { path = "cloudkit/crates/cloudkit_spi" }
cloudkit_api = { path = "cloudkit/crates/cloudkit_api" }
cloudkit_core = { path = "cloudkit/crates/cloudkit_core" }
# CloudKit provider crates (nested under cloudkit_core)
cloudkit-aws = { path = "cloudkit/crates/cloudkit_core/aws" }
cloudkit-azure = { path = "cloudkit/crates/cloudkit_core/azure" }
cloudkit-gcp = { path = "cloudkit/crates/cloudkit_core/gcp" }
cloudkit-oracle = { path = "cloudkit/crates/cloudkit_core/oracle" }

# CloudEmu modules



# Async
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Representation
bytes = "1.9"
http = "1.4"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Web
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# UI
dioxus = { version = "0.6", features = ["web", "router"] }
dioxus-desktop = "0.6"

# Native GUI
iced = { version = "0.13", features = ["tokio"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
zip = "2.2"
tempfile = "3.16"

# Testing
mockall = "0.13"
wiremock = "0.6"
tokio-test = "0.4"

# AWS SDK
aws-config = "1.5"
aws-sdk-s3 = "1.65"
aws-sdk-ec2 = "1.52"
aws-sdk-dynamodb = "1.56"
aws-sdk-sqs = "1.51"
aws-sdk-sns = "1.53"
aws-sdk-lambda = "1.60"
aws-sdk-secretsmanager = "1.52"
aws-sdk-cloudwatch = "1.52"
aws-sdk-cloudwatchlogs = "1.52"
aws-sdk-eventbridge = "1.52"
aws-sdk-sfn = "1.54"
aws-sdk-cognitoidentityprovider = "1.54"
aws-sdk-kms = "1.52"

# Azure SDK
azure_core = "0.21"
azure_storage = "0.21"
azure_storage_blobs = "0.21"
azure_identity = "0.21"
azure_security_keyvault = "0.21"

# GCP SDK
google-cloud-storage = "0.22"
google-cloud-pubsub = "0.29"

