[workspace]
resolver = "2"
members = [

    # CloudEmu provider crates (Full SEA pattern)
    # AWS
    "cloudemu/aws/control-plane/aws-control-spi",
    "cloudemu/aws/control-plane/aws-control-api",
    "cloudemu/aws/control-plane/aws-control-core",
    "cloudemu/aws/control-plane/aws-control-facade",
    "cloudemu/aws/data-plane/aws-data-spi",
    "cloudemu/aws/data-plane/aws-data-api",
    "cloudemu/aws/data-plane/aws-data-core",
    "cloudemu/aws/data-plane/aws-data-facade",
    # Azure
    "cloudemu/azure/control-plane/azure-control-spi",
    "cloudemu/azure/control-plane/azure-control-api",
    "cloudemu/azure/control-plane/azure-control-core",
    "cloudemu/azure/control-plane/azure-control-facade",
    "cloudemu/azure/data-plane/azure-data-spi",
    "cloudemu/azure/data-plane/azure-data-api",
    "cloudemu/azure/data-plane/azure-data-core",
    "cloudemu/azure/data-plane/azure-data-facade",
    # Oracle
    "cloudemu/oracle/control-plane/oracle-control-spi",
    "cloudemu/oracle/control-plane/oracle-control-core",
    "cloudemu/oracle/data-plane/oracle-data-core",
    # GCP
    "cloudemu/gcp/control-plane/gcp-control-spi",
    "cloudemu/gcp/control-plane/gcp-control-api",
    "cloudemu/gcp/control-plane/gcp-control-core",
    "cloudemu/gcp/control-plane/gcp-control-facade",
    "cloudemu/gcp/data-plane/gcp-data-spi",
    "cloudemu/gcp/data-plane/gcp-data-api",
    "cloudemu/gcp/data-plane/gcp-data-core",
    "cloudemu/gcp/data-plane/gcp-data-facade",
    # ZeroCloud (Private Cloud)
    "cloudemu/zero/control-plane/zero-control-spi",
    "cloudemu/zero/control-plane/zero-control-core",
    "cloudemu/zero/data-plane/zero-data-core",
    # RustScript Lint/Security crates
    "crates/rsc-lint",
    "crates/rsc-security",
    # CloudKit crates
    "cloudkit/crates/cloudkit_*",
    # CloudKit provider crates (nested under cloudkit_core)
    "cloudkit/crates/cloudkit_core/aws",
    "cloudkit/crates/cloudkit_core/azure",
    "cloudkit/crates/cloudkit_core/zero",
    "cloudemu/server",
    "apps/cloudcost", "cloudemu/zero/zero-cli", "cloudemu/zero/control-plane/zero-control-facade",
    "cloudemu/zero/sdk/zero-sdk-rust",
]


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["SWE Engineering Labs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sweengineeringlabs/swe-cloud"

[workspace.dependencies]



# Async
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Representation
bytes = "1.9"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Web
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
zip = "2.2"
tempfile = "3.16"
rusqlite = { version = "0.32", features = ["bundled"] }

# Testing
mockall = "0.13"
wiremock = "0.6"
tokio-test = "0.4"

# AWS SDK
aws-config = "1.5"
aws-sdk-s3 = "1.65"
aws-sdk-ec2 = "1.52"
aws-sdk-dynamodb = "1.56"
aws-sdk-sqs = "1.51"
aws-sdk-sns = "1.53"
aws-sdk-lambda = "1.60"
aws-sdk-secretsmanager = "1.52"
aws-sdk-cloudwatch = "1.52"
aws-sdk-cloudwatchlogs = "1.52"
aws-sdk-eventbridge = "1.52"
aws-sdk-sfn = "1.54"
aws-sdk-cognitoidentityprovider = "1.54"
aws-sdk-kms = "1.52"

# Azure SDK
azure_core = "0.21"
azure_storage = "0.21"
azure_storage_blobs = "0.21"
azure_identity = "0.21"
azure_security_keyvault = "0.21"

# GCP SDK
google-cloud-storage = "0.22"
google-cloud-pubsub = "0.29"

