[package]
name = "cloudcost"
version = "0.1.0"
edition = "2021"
description = "CloudCost - Standalone FinOps Engine"

[dependencies]
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
csv = "1.3"
tabled = "0.15"
# We might eventually dep on cloudemu crates for shared types, 
# but for now keeping it standalone to matching design doc "Standalone Binary".
