[package]
name = "cloudemu-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
cloudemu-ui = { path = "../../frontend" }
dioxus = { workspace = true, features = ["desktop"] }
dioxus-desktop = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
