[package]
name = "cloudemu-web"
version.workspace = true
edition.workspace = true

[dependencies]
cloudemu-ui = { path = "../../frontend" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
