[package]
name = "cloudemu_server"
version = "0.2.0"
edition = "2021"

[dependencies]
aws-control-facade = { path = "../aws/control-plane/aws-control-facade" }
azure-control-facade = { path = "../azure/control-plane/azure-control-facade" }
gcp-control-facade = { path = "../gcp/control-plane/gcp-control-facade" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
http-body-util = "0.1"

[dev-dependencies]
reqwest = { workspace = true }
async-trait = { workspace = true }
