[package]
name = "cloudemu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Production-grade local cloud emulator - AWS S3, DynamoDB, SQS and more"
keywords = ["cloud", "emulator", "aws", "s3", "terraform"]
categories = ["development-tools::testing", "simulation"]

[features]
default = ["s3"]
s3 = []
dynamodb = []
sqs = []
sns = []
lambda = []
secretsmanager = []
eventbridge = []
kms = []
cloudwatch = []
cognito = []
stepfunctions = []
full = ["s3", "dynamodb", "sqs", "sns", "lambda", "secretsmanager", "eventbridge", "kms", "cloudwatch", "cognito", "stepfunctions"]

[dependencies]
control-plane = { path = "../control-plane" }
data-plane = { path = "../data-plane" }

tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[[bin]]
name = "cloudemu"
path = "src/main.rs"
