[package]
name = "cloudkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Unified multi-cloud SDK with SEA architecture"
keywords = ["cloud", "aws", "azure", "gcp", "multi-cloud"]
categories = ["api-bindings", "asynchronous"]

[features]
default = []

[dependencies]
# Core
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Date/Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Bytes
bytes = { workspace = true }

# Futures
futures = { workspace = true }


[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
wiremock = { workspace = true }
tracing-subscriber = { workspace = true }
