[package]
name = "cloudkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Unified multi-cloud SDK with SEA architecture"
keywords = ["cloud", "aws", "azure", "gcp", "multi-cloud"]
categories = ["api-bindings", "asynchronous"]

[features]
default = []

[dependencies]
# Foundation crates (re-export everything from these)
cloudkit_spi = { path = "../cloudkit_spi" }
cloudkit_api = { path = "../cloudkit_api" }
cloudkit_core = { path = "../cloudkit_core" }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
wiremock = { workspace = true }
tracing-subscriber = { workspace = true }
