[package]
name = "control-plane"
version = "0.1.0"
edition = "2021"

[features]
default = ["s3"]
s3 = []
dynamodb = []
sqs = []
sns = []
lambda = []
secretsmanager = []
eventbridge = []
kms = []
cloudwatch = []
cognito = []
stepfunctions = []
full = ["s3", "dynamodb", "sqs", "sns", "lambda", "secretsmanager", "eventbridge", "kms", "cloudwatch", "cognito", "stepfunctions"]

[dependencies]
data-plane = { path = "../data-plane" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1.6", features = ["full"] }
quick-xml = { version = "0.37", features = ["serialize"] }
percent-encoding = "2.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
