[package]
name = "cloudemu-server"
version = "0.2.0"
edition = "2021"

[dependencies]
cloudemu-core = { path = "../cloudemu-core" }
cloudemu = { path = "../control-plane" } # AWS/Control Plane
cloudemu-azure = { path = "../cloudemu-azure" }
cloudemu-gcp = { path = "../cloudemu-gcp" }
data-plane = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
http-body-util = "0.1"

[dev-dependencies]
reqwest = { workspace = true }
