[package]
name = "cloudemu_api"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Service API traits for CloudEmu - defines emulator service contracts"

[dependencies]
cloudemu_spi = { path = "../cloudemu_spi" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
