[package]
name = "cloudemu_core"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Core orchestration layer for CloudEmu - implements provider orchestration"

[features]
default = []
aws = ["dep:cloudemu-aws"]
azure = ["dep:cloudemu-azure"]
gcp = ["dep:cloudemu-gcp"]
full = ["aws", "azure", "gcp"]

[dependencies]
# Foundation
cloudemu_spi = { path = "../cloudemu_spi" }
cloudemu_api = { path = "../cloudemu_api" }

# Provider implementations (optional, nested under this crate)
cloudemu-aws = { path = "./aws", optional = true }
cloudemu-azure = { path = "./azure", optional = true }
cloudemu-gcp = { path = "./gcp", optional = true }

# Core async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
