[package]
name = "cloudemu_server"
version = "0.2.0"
edition = "2021"

[dependencies]
cloudemu_spi = { path = "../cloudemu_spi" }
cloudemu-aws = { path = "../cloudemu_core/aws" }
cloudemu-azure = { path = "../cloudemu_core/azure" }
cloudemu-gcp = { path = "../cloudemu_core/gcp" }
data-plane = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
http-body-util = "0.1"

[dev-dependencies]
reqwest = { workspace = true }
async-trait = { workspace = true }
