[package]
name = "cloudemu_spi"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Service Provider Interface (SPI) for CloudEmu - foundational types and traits"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
