[package]
name = "cloudemu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["s3"]
s3 = []
dynamodb = []
sqs = []
sns = []
lambda = []
secretsmanager = []
eventbridge = []
kms = []
cloudwatch = []
cognito = []
stepfunctions = []
full = ["s3", "dynamodb", "sqs", "sns", "lambda", "secretsmanager", "eventbridge", "kms", "cloudwatch", "cognito", "stepfunctions"]

[dependencies]
cloudemu-core = { path = "../cloudemu-core" }
data-plane = { workspace = true }

async-trait = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }
http-body-util = "0.1"
hyper = { version = "1.6", features = ["full"] }
quick-xml = { version = "0.37", features = ["serialize"] }
percent-encoding = "2.3"
base64 = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"


[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
cloudkit = { workspace = true }
cloudkit-aws = { path = "../../../cloudkit/crates/cloudkit_core/aws", default-features = false, features = ["s3"] }


[[bin]]
name = "cloudemu"
path = "src/main.rs"
