[package]
name = "data-plane"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"
md-5 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = { workspace = true }
regex = "1.11"
hmac = "0.12"
aes-gcm = "0.10"
http = { workspace = true }

