[package]
name = "cloudkit_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core orchestration layer for CloudKit - implements high-level APIs"
keywords = ["cloud", "core", "orchestration"]
categories = ["api-bindings"]

[features]
default = []
aws = ["dep:cloudkit-aws"]
gcp = ["dep:cloudkit-gcp"]
azure = ["dep:cloudkit-azure"]
oracle = ["dep:cloudkit-oracle"]
full = ["aws", "gcp", "azure", "oracle"]

[dependencies]
# Foundation
cloudkit_spi = { path = "../cloudkit_spi" }
cloudkit_api = { path = "../cloudkit_api" }

# Provider implementations (optional)
cloudkit-aws = { path = "../cloudkit_aws", optional = true }
cloudkit-gcp = { path = "../cloudkit_gcp", optional = true }
cloudkit-azure = { path = "../cloudkit_azure", optional = true }
cloudkit-oracle = { path = "../cloudkit_oracle", optional = true }

# Core async
tokio = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
futures = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
