[package]
name = "cloudkit_spi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Service Provider Interface for CloudKit - Low-level provider contracts"
keywords = ["cloud", "spi", "provider", "interface"]
categories = ["api-bindings"]

[features]
default = []

[dependencies]
# Core async
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Date/Time
chrono = { workspace = true }

# HTTP
reqwest = { workspace = true }

# UUID
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
