[package]
name = "rsc-lint"
version = "0.1.0"
edition = "2021"
description = "Linting framework for RustScript projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sweengineeringlabs/swe-cloud"
keywords = ["rustscript", "lint", "i18n", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.16"
