[package]
name = "rsc-security"
version = "0.1.0"
edition = "2021"
description = "Security lint rules for RustScript projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sweengineeringlabs/swe-cloud"
keywords = ["rustscript", "lint", "security", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
rsc-lint = { path = "../rsc-lint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.16"
